--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,7 @@
         "react/prop-types": "off",
         "react/react-in-jsx-scope": "off",
 		"react/self-closing-comp": ["error", {"component": true,"html": true}],
-        "@typescript-eslint/explicit-function-return-type": "off"
+        "@typescript-eslint/explicit-function-return-type": "off", 
+        "@typescript-eslint/method-signature-style": "off"
     }
 }
